Delaunay generates paths now. Initial support for Constrained Delaunay

--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
   ],
   "noflo": {
     "components": {
-      "DelaunayTriangulation": "components/DelaunayTriangulation.coffee"
+      "ConstrainedDelaunay": "components/ConstrainedDelaunay.coffee",
+      "Delaunay": "components/Delaunay.coffee"
     }
   }
 }
