Initial support for Voronoi diagrams

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   "noflo": {
     "components": {
       "ConstrainedDelaunay": "components/ConstrainedDelaunay.coffee",
-      "Delaunay": "components/Delaunay.coffee"
+      "Delaunay": "components/Delaunay.coffee",
+      "Voronoi": "components/Voronoi.coffee"
     }
   }
 }
